--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,14 +9,14 @@
             "type": "node",
             "request": "launch",
             "name": "Launch Program",
-            "program": "${workspaceFolder}/raid_store.js"
+            "program": "${workspaceFolder}/crystal_popping.js"
         },
 
         {
             "name": "使用本机 Chrome 调试",
             "type": "chrome",
             "request": "launch",
-            "file": "${workspaceRoot}/calculator_cn.html",
+            "file": "${workspaceRoot}/pop_crystal.html",
             //  "url": "http://mysite.com/index.html", //使用外部服务器时,请注释掉 file, 改用 url, 并将 useBuildInServer 设置为 false "http://mysite.com/index.html
             "runtimeExecutable": "C:\\Program Files (x86)\\SRWare Iron\\chrome.exe", // 改成您的 Chrome 安装路径
             "sourceMaps": true,
